verification/logs/install-final-admission-policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  annotations:
    meta.helm.sh/release-name: cap
    meta.helm.sh/release-namespace: cap
  creationTimestamp: "2026-09-14T15:58:08Z"
  generation: 1
  labels:
    app.kubernetes.io/managed-by: Helm
  name: cap-private-registry
  resourceVersion: "33164"
  uid: 0b68a38c-1be1-42d9-82d9-d360281cf981
spec:
  failurePolicy: Fail
  matchConstraints:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: cap
    objectSelector: {}
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
      scope: Namespaced
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - UPDATE
      resources:
      - pods/ephemeralcontainers
      scope: Namespaced
  validations:
  - expression: |
      object.spec.containers.all(c,
        c.image.startsWith("host.docker.internal:5001/")
      ) && (
        !has(object.spec.initContainers)
        ||
        object.spec.initContainers.all(c,
          c.image.startsWith("host.docker.internal:5001/")
        )
      ) && (
        !has(object.spec.ephemeralContainers)
        ||
        object.spec.ephemeralContainers.all(c,
          c.image.startsWith("host.docker.internal:5001/")
        )
      )
    message: All Cap Pod container images, including init and ephemeral containers,
      must come from the approved private registry.
    reason: Forbidden
status:
  observedGeneration: 1
  typeChecking: {}
